# internal/domain/dto/item.go
@@ -1,0 +1,9 @@
+package dto
+
+type CreateItemDTO struct {
+	Name        string
+	Description string
+	Price       int
+	ImageURL    string
+	InStock     int
+}
